--- a/juli/0.1.6.2/Dockerfile
+++ b/juli/0.1.6.2/Dockerfile
@@ -1,4 +1,4 @@
-FROM zamora/r-devtools
+FROM zamora/r-devtools:latest
 
 ADD https://github.com/sgilab/JuLI/raw/master/JuLI-v0.1.6.2.zip /tmp/JuLI-v0.1.6.2.zip
 RUN unzip /tmp/JuLI-v0.1.6.2.zip
