--- a/juli/0.1.6.2/Dockerfile
+++ b/juli/0.1.6.2/Dockerfile
@@ -1,9 +1,9 @@
-# hadolint ignore=DL3007
-FROM zamora/r-devtools:latest
+FROM zamora/r-devtools@sha256:b858468b5a82331ae5b7a3cfc46bd5c2653f12fb65abc0efd6f1af95bdb979c6
 
 ADD https://github.com/sgilab/JuLI/raw/master/JuLI-v0.1.6.2.zip /tmp/JuLI-v0.1.6.2.zip
-RUN unzip /tmp/JuLI-v0.1.6.2.zip
-COPY JuLI-v0.1.6.2/juliv0.1.6.2 /app/juliv0.1.6.2
+RUN unzip /tmp/JuLI-v0.1.6.2.zip -d /unpack/
+#COPY /unpack/JuLI-v0.1.6.2/juliv0.1.6.2 /app/juliv0.1.6.2
+#WORKDIR /app
 
 # install R packages
 RUN R -e "install.packages('rlang',repos = 'http://cran.us.r-project.org')" \
@@ -12,7 +12,7 @@ RUN R -e "install.packages('rlang',repos = 'http://cran.us.r-project.org')" \
   && R -e "install.packages('ggplot2',repos = 'http://cran.us.r-project.org')" \
   && R -e "install.packages('BiocManager',repos = 'http://cran.us.r-project.org')" \
   && R -e "BiocManager::install('Rsamtools', update = FALSE)" \
-  && R -e "devtools::install_local('/app/juliv0.1.6.2')"
+  && R -e "devtools::install_local('/unpack/JuLI-v0.1.6.2/juliv0.1.6.2')"
 
 
 
