fix(samtools): change to pip install due to 0.7.0 not being on bioconda yet

--- a/samtools/v1.21/Dockerfile
+++ b/samtools/v1.21/Dockerfile
@@ -11,7 +11,7 @@ RUN conda install -c conda-forge conda-pack conda-libmamba-solver && \
     conda config --set solver libmamba && \
     conda create --name hydra -c bioconda  -c conda-forge \
         samtools=${VERSION} \
-        snakemake-wrapper-utils=0.7.0
+	python=3.9 
 
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
@@ -28,4 +28,5 @@ LABEL samtools=${VERSION}
 
 COPY --from=build /opt/conda/envs/hydra/ /opt/conda/envs/hydra/
 ENV PATH=${PATH}:/opt/conda/envs/hydra/bin
-    
+
+RUN pip install snakemake-wrapper-utils==0.7.0    
