fix(samtools): Update Dockerfile

--- a/samtools/v1.21/Dockerfile
+++ b/samtools/v1.21/Dockerfile
@@ -10,8 +10,7 @@ ENV VERSION=${VERSION}
 RUN conda install -c conda-forge conda-pack conda-libmamba-solver && \
     conda config --set solver libmamba && \
     conda create --name hydra -c bioconda  -c conda-forge \
-        samtools=${VERSION} \
-        snakemake-wrapper-utils=0.7.0
+        samtools=${VERSION} python=3.9 
 
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
@@ -28,4 +27,5 @@ LABEL samtools=${VERSION}
 
 COPY --from=build /opt/conda/envs/hydra/ /opt/conda/envs/hydra/
 ENV PATH=${PATH}:/opt/conda/envs/hydra/bin
-    
+
+RUN pip install --no-cache-dir snakemake-wrapper-utils==0.7.0    
