Installed bamsnap and other requirements

--- a/bamsnap/hook-f4bc661/Dockerfile
+++ b/bamsnap/hook-f4bc661/Dockerfile
@@ -1,34 +1,19 @@
 ARG VERSION=hook-f4bc661
 
-# The build-stage image:
-FROM python:3.9-slim AS build
+FROM python:3.9-slim-bullseye AS runtime
 
-ARG VERSION
-ENV VERSION=${VERSION}
-
-ENV VIRTUAL_ENV=/opt/venv
-RUN python3 -m venv $VIRTUAL_ENV
-ENV PATH="$VIRTUAL_ENV/bin:$PATH"
-
-# Install dependencies:
-# COPY requirements.txt .
-RUN wget --progress=dot:giga "https://github.com/clinical-genomics-uppsala/poppy_uppsala/blob/main/requirements.txt" && pip install --no-cache-dir -r "requirements.txt"
-
-# The runtime-stage image; we can use Debian as the
-# base image since the Conda env also includes Python
-# for us.
-FROM debian:buster-slim AS runtime
-
-RUN bash -c "source $VIRTUAL_ENV/bin/activate"
-
-ARG VERSION
 ENV VERSION=${VERSION}
 
 ################## METADATA ######################
 LABEL maintainer="camille.clouard@scilifelab.uu.se"
 LABEL version=${VERSION}
 LABEL bamsnap=${VERSION}
+LABEL python=3
 
+RUN apt-get update && apt-get upgrade -y && apt-get install --no-install-recommends -y wget git build-essential libz-dev zlib1g-dev python3-dev python3-pip python3-setuptools && wget --progress=dot:giga "https://raw.githubusercontent.com/clinical-genomics-uppsala/poppy_uppsala/refs/tags/v0.1.2/requirements.txt" && pip3 install --no-cache-dir -r requirements.txt && rm -rf /var/lib/apt/lists/* && apt-get remove -y wget git build-essential libz-dev zlib1g-dev python3-dev python3-pip python3-setuptools && apt-get autoremove -y && pip3 cache purge
+ 
+CMD ["bash"]    
 
-COPY --from=build /opt/conda/envs/hydra/ /opt/conda/envs/hydra/
-ENV PATH=${PATH}:/opt/conda/envs/hydra/bin
+# wget --progress=dot:giga "https://raw.githubusercontent.com/clinical-genomics-uppsala/poppy_uppsala/refs/tags/v0.1.2/requirements.txt" && \
+# RUN apt-get update && apt-get upgrade -y && apt-get install --no-install-recommends -y wget git build-essential libz-dev zlib1g-dev python3-dev python3-pip python3-setuptools && wget --progress=dot:giga "https://raw.githubusercontent.com/clinical-genomics-uppsala/poppy_uppsala/refs/tags/v0.1.2/requirements.txt" && pip install --no-cache-dir -r requirements.txt && rm -rf /var/lib/apt/lists/* && apt-get remove -y wget git build-essential libz-dev zlib1g-dev python3-dev python3-pip python3-setuptools && apt-get autoremove -y && pip cache purge 
+
