Ubuntu-based container with apt versioning

--- a/bamsnap/hook-f4bc661/Dockerfile
+++ b/bamsnap/hook-f4bc661/Dockerfile
@@ -1,12 +1,11 @@
-# Packages versions in the image used: https://packages.debian.org/bullseye/allpackages
-# The image python:3.9-slim-bullseye is built from debian:bullseye-slim, which itself uses Debian 11 (https://www.debian.org/releases/bullseye/)
-# Versions of packages installed by APT: wget=1.21-1 git=1:2.30.2-1 build-essential=12.9 zlib1g-dev=1:1.2.11.dfsg-2 python3-dev=3.9.2-3 python3-pip=20.3.4-4 python3-setuptools=52.0.0-4
+# More info: https://pythonspeed.com/articles/base-image-python-docker-images/
 
 ARG VERSION=hook-f4bc661
 
-FROM python:3.9-slim-bullseye AS runtime
+FROM ubuntu:20.04 AS runtime
 
 ENV VERSION="custom"
+ENV DEBIAN_FRONTEND=noninteractive
 
 ################## METADATA ######################
 LABEL maintainer="camille.clouard@scilifelab.uu.se"
@@ -14,6 +13,6 @@ LABEL version="custom"
 LABEL bamsnap="hook-f4bc661"
 LABEL python=3.9
 
-RUN apt-get update && apt-get upgrade -y && apt-get install --no-install-recommends -y wget git build-essential=12.9 zlib1g-dev python3-dev=3.9.2-3 python3-pip python3-setuptools && wget --progress=dot:giga "https://raw.githubusercontent.com/clinical-genomics-uppsala/poppy_uppsala/refs/tags/v0.1.2/requirements.txt" && pip3 install --no-cache-dir -r requirements.txt && rm -rf /var/lib/apt/lists/* && apt-get remove -y wget git build-essential libz-dev zlib1g-dev python3-dev python3-pip python3-setuptools && apt-get autoremove -y && pip3 cache purge
+RUN apt-get update && apt-get upgrade -y && apt install -y software-properties-common=0.99.9.12 python3-pip=20.0.2-5ubuntu1.11 && add-apt-repository -y ppa:deadsnakes/ppa && apt-get install --no-install-recommends -y wget=1.20.3-1ubuntu2.1 git=1:2.25.1-1ubuntu3.14 build-essential=12.8ubuntu1.1 zlib1g-dev=1:1.2.11.dfsg-2ubuntu1.5 libzip-dev=1.5.1-0ubuntu1 bzip2=1.0.8-2 libbz2-dev=1.0.8-2 liblzma-dev=5.2.4-1ubuntu1.1 python3.9=3.9.21-1+focal1 python3.9-dev=3.9.21-1+focal1 python3.9-venv python3-setuptools && wget --progress=dot:giga "https://raw.githubusercontent.com/clinical-genomics-uppsala/poppy_uppsala/refs/tags/v0.1.2/requirements.txt" && python3.9 -m pip install --no-cache-dir -r requirements.txt && rm -rf /var/lib/apt/lists/* && apt-get remove -y libz-dev zlib1g-dev python3.9-dev python3-pip python3-setuptools python3.9-venv && apt-get autoremove -y
  
 CMD ["bash"]
