--- a/seqtk/v1.4/Dockerfile
+++ b/seqtk/v1.4/Dockerfile
@@ -28,7 +28,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y make=4.1-6 \
 RUN wget --progress=dot:giga https://github.com/lh3/seqtk/archive/v${SEQTK_VERSION}.tar.gz && \
  tar -xzvf v${SEQTK_VERSION}.tar.gz && \
  rm v${SEQTK_VERSION}.tar.gz
-WORKDIR seqtk-${SEQTK_VERSION}
+WORKDIR /seqtk-${SEQTK_VERSION}
 RUN make 
 
 # set PATH and working directory
