fix: version lock apt and R packages

--- a/scramble/Dockerfile
+++ b/scramble/Dockerfile
@@ -21,37 +21,47 @@ ENV BIOC_VERSION=3.18
 RUN apt-get clean all && \
     apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y  \
-        autoconf=2.71-3 \
-        autogen=1:5.18.16-5build1 \
-        build-essential=12.10ubuntu1 \
-        curl=8.5.0-2ubuntu10.6 \
-        libbz2-dev=1.0.8-5.1build0.1 \
-        libcurl4-gnutls-dev=8.5.0-2ubuntu10.6 \
-        libhts3=1.19+ds-1.1build3 \
-        libhts-dev=1.19+ds-1.1build3 \
-        liblzma-dev=5.6.1+really5.4.5-1ubuntu0.2 \
-        libncurses5-dev=6.4+20240113-1ubuntu2 \
-        libnss-sss=1.0.0-2ubuntu0.1 \
-        libssl-dev=3.0.13-0ubuntu3.6 \
-        libxml2-dev=2.9.14+dfsg-1.3ubuntu3.6 \
-        ncbi-blast+=2.12.0+ds-4build2 \
-        r-base=4.3.3-2build2 \
-        r-bioc-biostrings=2.70.2+dfsg-1 \
-        r-bioc-rsamtools=2.18.0+dfsg-1build2 \
-        r-cran-stringr=1.5.1-1 \
-        r-cran-optparse=1.7.4-1 \
-        zlib1g-dev=1:1.3.dfsg-3.1ubuntu2.1 \
+    apt-get install -y --no-install-recommends \
+        autoconf=2.71* \
+        autogen=1:5.18.16* \
+        build-essential=12.10* \
+        curl=8.5.0* \
+        git=1:2.43.0* \
+        libfontconfig1-dev=2.15.0* \
+        libfreetype-dev=2.13.2* \
+        libfribidi-dev=1.0.13* \
+        libharfbuzz-dev=8.3.0* \
+        libgit2-dev=1.7.2* \
+        libpng-dev=1.6.43* \
+        libtiff-dev=4.5.1* \
+        libjpeg-dev=8c* \
+        libbz2-dev=1.0.8* \
+        libcurl4-gnutls-dev=8.5.0* \
+        libhts3t64=1.19* \
+        libhts-dev=1.19* \
+        liblzma-dev=5.6.1* \
+        libncurses-dev=6.4* \
+        libssl-dev=3.0.13* \
+        libsqlite3-dev=3.45.1* \
+        libxml2-dev=2.9.14* \
+        ncbi-blast+=2.12.0* \
+        r-base=4.3.3* \
+        r-bioc-biostrings=2.70.2* \
+        r-bioc-rsamtools=2.18.0* \
+        r-cran-stringr=1.5.1* \
+        r-cran-optparse=1.7.4* \
+        zlib1g-dev=1:1.3* \
         && apt-get clean \
         && rm -rf /var/lib/apt/lists/*
 
 # install global r requirements
-# todo: doublecheck snapshot if needed; doublecheck rBLAST version
-ENV CRAN_SNAPSHOT=https://packagemanager.posit.co/cran/2024-04-01
+# Using a recent CRAN snapshot compatible with Ubuntu 24.04
+ENV CRAN_SNAPSHOT=https://packagemanager.posit.co/cran/2024-10-01
 RUN echo "local({ r <- getOption('repos'); r['CRAN'] <- '${CRAN_SNAPSHOT}'; options(repos = r) })" > ~/.Rprofile \
   && Rscript -e "if (!require('BiocManager', quietly = TRUE)) install.packages('BiocManager')" \
   && Rscript -e "BiocManager::install(version = '${BIOC_VERSION}', ask = FALSE, update = FALSE)" \
   && Rscript -e "if (!require('devtools', quietly = TRUE)) install.packages('devtools')" \
+  && Rscript -e "BiocManager::install('BiocFileCache', ask = FALSE, update = FALSE)" \
   && Rscript -e "devtools::install_github('mhahsler/rBLAST', ref = 'devel', dependencies = TRUE)" \
   && Rscript -e "if (!require('rBLAST')) stop('rBLAST installation failed')"
 
