--- a/bcftools/v1.23/Dockerfile
+++ b/bcftools/v1.23/Dockerfile
@@ -16,7 +16,7 @@ RUN conda install -c conda-forge conda-pack conda-libmamba-solver && \
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
 # for us.
-FROM debian:buster-slim AS runtime
+FROM debian:bookworm-slim AS runtime
 
 ARG VERSION
 ENV VERSION=${VERSION}
