Optimize Dockerfile by cleaning conda cache
Added conda clean command to reduce image size.

--- a/trgt/v5.0.0/Dockerfile
+++ b/trgt/v5.0.0/Dockerfile
@@ -7,10 +7,11 @@ ARG VERSION
 ENV VERSION=${VERSION}
 
 # Install conda-pack:
-RUN conda install -y -c conda-forge conda-pack conda-libmamba-solver && \
-    conda config --set solver libmamba && \
-    conda create -y --name hydra -c bioconda -c conda-forge \
-        trgt=${VERSION}
+RUN conda install -y -c conda-forge conda-libmamba-solver && \
+     conda config --set solver libmamba && \
+     conda create -y --name hydra -c bioconda -c conda-forge \
+     trgt=${VERSION} && \
+     conda clean -afy
 
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
