feat: update to v2.8

--- a/whatshap/Dockerfile
+++ b/whatshap/Dockerfile
@@ -1,36 +1,30 @@
+ARG VERSION=2.8
+
 # The build-stage image:
-FROM continuumio/miniconda3:4.10.3 AS build
+FROM continuumio/miniconda3:23.5.2-0 AS build
+
+ARG VERSION
+ENV VERSION=${VERSION}
 
 # Install conda-pack:
-RUN conda install -c conda-forge conda-pack && \
-    conda config --add channels bioconda && \
-    conda config --add channels conda-forge &&\
-    conda create --name hydra whatshap=1.7
-
-
-# Use conda-pack to create a standalone enviornment
-# in /venv:
-RUN conda-pack -n hydra -o /tmp/env.tar
-WORKDIR /venv
-RUN tar xf /tmp/env.tar
-
-# We've put venv in same path it'll be in final image,
-# so now fix up paths:
-RUN /venv/bin/conda-unpack
+RUN conda install -c conda-forge conda-pack conda-libmamba-solver && \
+    conda config --set solver libmamba && \
+    conda create --name hydra -c bioconda  -c conda-forge \
+        whatshap=${VERSION}
 
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
 # for us.
 FROM debian:buster-slim AS runtime
 
+ARG VERSION
+ENV VERSION=${VERSION}
+
 ################## METADATA ######################
-LABEL maintainer="jessika.nordin@scilifelab.uu.se"
-LABEL whatshap=1.7
-LABEL version=1.7
+LABEL maintainer="camille.clouard@scilifelab.uu.se"
+LABEL version=${VERSION}
+LABEL whatshap=${VERSION}
 
-# Copy /venv from the previous stage:
-# to /usr/local to make it possible
-# running the softwares without activating
-# any conda env
 
-COPY --from=build /venv  /usr/local/
+COPY --from=build /opt/conda/envs/hydra/ /opt/conda/envs/hydra/
+ENV PATH=${PATH}:/opt/conda/envs/hydra/bin
